--- a/style.scss
+++ b/style.scss
@@ -10,8 +10,8 @@ body{
     background-color:$iconBackground;
     display:flex;
     align-items: center;
-    justify-content: center;
-    width:100vw;
+    justify-content: space-around;
+    // width:100vw;
     height:100vh;
     .background1{
         width:100vw;
@@ -31,7 +31,7 @@ body{
     display: inline-block;
     height:200px;
     width:360px;
-    min-width:280px;
+    min-width:300px;
     border-radius:10px 100px 10px 10px;
         .leftComponentsContainer{
         margin-top:40px;
@@ -60,7 +60,6 @@ body{
     flex-wrap:wrap;
     justify-content:space-between;
     align-items: center;
-    height:200px;
     width: 64vw;
 }
 
@@ -77,7 +76,7 @@ body{
     background-color:hsl(228, 56%, 26%);;
     height:150px;
     width:500px;
-    min-width:280px;
+    min-width:300px;
     border-radius:10px;
     margin-top:30px;
     .rightContainer{
@@ -158,7 +157,7 @@ body{
     .bubble{
         border-radius:10px 10px 10px 10px;
         top:120px;
-        right:60px;
+        right:70px;
     }
     .rightContainer{
         text-align: center;
@@ -182,6 +181,9 @@ body{
         position:absolute;
         bottom:0;
     }
+}
+.container{
+    justify-content: center;
 }
 
 }
